Updated metadata and info

--- a/about.html
+++ b/about.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="CareConde is your honest help for junk removal, moving, and handyman services in Norman, OK and surrounding areas. Locally owned, fully dedicated."
+    />
+    <meta
+      name="keywords"
+      content="junk removal Norman OK, moving help Oklahoma, handyman Norman, CareConde, furniture assembly, remodeling, local services"
+    />
   </head>
   <body>
     <header class="navbar">
@@ -51,8 +59,15 @@
       </ul>
 
       <p style="margin-top: 1.5rem">
-        We treat every job like it's for family. That’s why our clients call us
-        back — and refer us to others.
+        We believe in treating people right — with respect, fairness, and
+        hustle. Our respectful team offers same-day quotes, reliable work, and
+        honest service you can count on. Whether you're a homeowner, a renter,
+        or a business, CareConde is your go-to for dependable help across
+        Norman, Moore, OKC, and nearby towns.
+      </p>
+
+      <p style="margin-top: 1rem; font-size: 0.9rem; color: #888">
+        #junkremoval #movinghelp #furnitureassembly #remodeling #careconde
       </p>
     </section>
 
