--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@
       rel="stylesheet"
     />
   </head>
+  <meta
+    name="description"
+    content="CareConde is your honest help for junk removal, moving, and handyman services in Norman, OK and surrounding areas. Locally owned, fully dedicated."
+  />
+  <meta
+    name="keywords"
+    content="junk removal Norman OK, moving help Oklahoma, handyman Norman, CareConde, furniture assembly, remodeling, local services"
+  />
+
   <body>
     <header class="navbar">
       <div class="logo">
