--- a/index.html
+++ b/index.html
@@ -9,11 +9,19 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="CareConde is your honest help for junk removal, moving, and handyman services in Norman, OK and surrounding areas. Locally owned, fully dedicated."
+    />
+    <meta
+      name="keywords"
+      content="junk removal Norman OK, moving help Oklahoma, handyman Norman, CareConde, furniture assembly, remodeling, local services"
+    />
   </head>
   <body>
     <header class="navbar">
       <div class="logo">
-        <img src="assets/images/logo.png" alt="CareConde Logo" />
+        <img src="assets/images/IMG_5805.jpeg" alt="CareConde Logo" />
         <h1>CareConde</h1>
       </div>
       <nav>
@@ -25,10 +33,14 @@
       </nav>
     </header>
 
+    <!-- HERO SECTION (replace the old one) -->
     <section class="hero">
       <div class="hero-text">
-        <h2>Honest help for your home</h2>
-        <p>Junk Removal • Moving • Handyman</p>
+        <h2>Your Honest Help for Home & Property</h2>
+        <p>
+          Locally owned. Fully dedicated. Proudly serving Norman & surrounding
+          areas.
+        </p>
         <a class="cta-button" href="tel:4053679513"
           >Call or Text (405) 367-9513</a
         >
