--- a/servicse.html
+++ b/servicse.html
@@ -9,6 +9,14 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="description"
+      content="CareConde is your honest help for junk removal, moving, and handyman services in Norman, OK and surrounding areas. Locally owned, fully dedicated."
+    />
+    <meta
+      name="keywords"
+      content="junk removal Norman OK, moving help Oklahoma, handyman Norman, CareConde, furniture assembly, remodeling, local services"
+    />
   </head>
   <body>
     <header class="navbar">
@@ -37,15 +45,13 @@
       style="padding: 2rem 1.5rem; max-width: 1000px; margin: auto"
     >
       <div class="service-detail">
-        <h3>🗑️ Junk Removal</h3>
-        <p>
-          We haul away old furniture, appliances, yard debris, and general
-          clutter — responsibly and quickly.
-        </p>
+        <h3>🔧 Handyman Help</h3>
+        <p>Small fixes, big impact. Reliable handyman help when you need it.</p>
         <ul style="margin-left: 1.5rem; list-style: disc">
-          <li>Single item pickup or full property cleanouts</li>
-          <li>Garage, shed, attic, or rental cleanouts</li>
-          <li>Donation drop-offs and recycling when possible</li>
+          <li>TV mounting, shelves, curtain rods</li>
+          <li>Furniture assembly</li>
+          <li>Transporting large or heavy items</li>
+          <li>Minor repairs, caulking, light remodeling & more</li>
         </ul>
       </div>
 
