--- a/contact.html
+++ b/contact.html
@@ -60,17 +60,19 @@
     </section>
 
     <section style="padding: 2rem 1.5rem; text-align: center">
-      <h3>Our Service Area</h3>
+      <h3>We're proud to serve Norman and surrounding areas</h3>
       <div
-        style="
-          width: 100%;
-          height: 300px;
-          background-color: #ddd;
-          border-radius: 8px;
-        "
+        style="width: 100%; height: 300px; border-radius: 8px; overflow: hidden"
       >
-        <!-- Replace with embedded Google Map iframe if desired -->
-        <p style="padding: 2rem; color: #444">[Google Map goes here]</p>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51590.53927448684!2d-97.51642839456825!3d35.22168844305279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b26d9389e3ad11%3A0x39015369c1459f1e!2sNorman%2C%20OK!5e0!3m2!1sen!2sus!4v1720021849693!5m2!1sen!2sus"
+          width="100%"
+          height="100%"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
     </section>
 
