--- a/index.html
+++ b/index.html
@@ -96,10 +96,18 @@
     <section style="padding: 3rem 1.5rem">
       <h2 style="text-align: center; margin-bottom: 2rem">Our Work</h2>
       <div class="gallery-grid">
-        <img src="assets/images/job1.jpg" alt="Junk removal before/after" />
-        <img src="assets/images/job2.jpg" alt="Moving job" />
-        <img src="assets/images/job3.jpg" alt="Handyman fix" />
-        <img src="assets/images/job4.jpg" alt="Cleanout" />
+        <img
+          src="assets/images/photo-1584786454449-ecc77738684c.avif"
+          alt="Junk removal before/after"
+        />
+        <img
+          src="assets/images/premium_photo-1661409078904-42334551db0c.avif"
+          alt="Moving job"
+        />
+        <img
+          src="assets/images/premium_photo-1682597001042-c130c0627a7e.avif"
+          alt="Handyman fix"
+        />
       </div>
     </section>
 
