--- a/contact.html
+++ b/contact.html
@@ -5,17 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact | CareConde</title>
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
       rel="stylesheet"
     />
     <meta
       name="description"
-      content="CareConde is your honest help for junk removal, moving, and handyman services in Norman, OK and surrounding areas. Locally owned, fully dedicated."
+      content="Contact CareConde for a free quote on junk removal, moving, or handyman services in the Norman, OK area. Call, text, or send us a message!"
     />
     <meta
       name="keywords"
-      content="junk removal Norman OK, moving help Oklahoma, handyman Norman, CareConde, furniture assembly, remodeling, local services"
+      content="contact CareConde, get a quote, free estimate, Norman OK services, phone number"
     />
   </head>
 
@@ -25,59 +27,68 @@
         <img src="assets/images/logo.png" alt="CareConde Logo" />
       </div>
       <nav>
-        <div class="hamburger" id="hamburger">&#9776;</div>
+        <button
+          class="hamburger"
+          id="hamburger"
+          aria-label="Toggle navigation"
+          aria-expanded="false"
+        >
+          &#9776;
+        </button>
         <ul class="nav-links" id="navLinks">
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
 
-    <section class="hero">
-      <div class="hero-text">
-        <h2>Let’s Get in Touch</h2>
-        <p>Call or text us anytime — or send a message below.</p>
-        <a class="cta-button" href="tel:4053679513">📞 (405) 367-9513</a>
-      </div>
-    </section>
+    <main>
+      <section class="hero-small">
+        <div class="hero-text">
+          <h1>Let’s Get in Touch</h1>
+          <p>Call or text us anytime — or send a message below.</p>
+          <a class="cta-button" href="tel:4053679513"
+            ><span aria-hidden="true">📞</span> (405) 367-9513</a
+          >
+        </div>
+      </section>
 
-    <section style="padding: 2rem 1.5rem; max-width: 600px; margin: auto">
-      <form id="contactForm">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" required />
+      <section class="contact-form-section">
+        <form id="contactForm" name="contact" data-netlify="true">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" name="name" required />
 
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" required />
+          <label for="phone">Phone Number</label>
+          <input type="tel" id="phone" name="phone" required />
 
-        <label for="message">Your Message</label>
-        <textarea id="message" name="message" rows="5" required></textarea>
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message" rows="5" required></textarea>
 
-        <button type="submit" class="cta-button" style="margin-top: 1rem">
-          Send Message
-        </button>
-      </form>
-    </section>
+          <button type="submit" class="cta-button">Send Message</button>
+        </form>
+      </section>
 
-    <section style="padding: 2rem 1.5rem; text-align: center">
-      <h3>We're proud to serve Norman and surrounding areas</h3>
-      <div
-        style="width: 100%; height: 300px; border-radius: 8px; overflow: hidden"
-      >
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51590.53927448684!2d-97.51642839456825!3d35.22168844305279!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b26d9389e3ad11%3A0x39015369c1459f1e!2sNorman%2C%20OK!5e0!3m2!1sen!2sus!4v1720021849693!5m2!1sen!2sus"
-          width="100%"
-          height="100%"
-          style="border: 0"
-          allowfullscreen=""
-          loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"
-        ></iframe>
-      </div>
-    </section>
+      <section class="service-area-section">
+        <h2>We're proud to serve Norman and surrounding areas</h2>
+        <div class="map-container">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d104573.28722151755!2d-97.52521568288593!3d35.222599900000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x87b2685a53915555%3A0x24b6524581979331!2sNorman%2C%20OK!5e0!3m2!1sen!2sus!4v1672531234567!5m2!1sen!2sus"
+            width="100%"
+            height="100%"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+            title="Map of CareConde service area centered on Norman, Oklahoma"
+          ></iframe>
+        </div>
+      </section>
+    </main>
 
     <footer>
-      <p>&copy; 2025 CareConde. All rights reserved.</p>
+      <p>© 2025 CareConde. All rights reserved.</p>
     </footer>
 
     <script src="js/script.js"></script>
