updated logo for all pages

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
   <body>
     <header class="navbar">
       <div class="logo">
-        <img src="assets/images/logo.png" alt="CareConde Logo" />
+        <img src="assets/images/IMG_5805.jpeg" alt="CareConde Logo" />
       </div>
       <nav>
         <button
